# test-protobuf-in-zmq

./: CMakeLists.txt  LOCAL_BUILD.cmake  README.md  Vagrantfile
messages/: CMakeLists.txt  num_msg.proto
src/: my_pub_sub_proto.cpp  zmq_pub_sub_num_msg.cpp
